--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -42,7 +42,7 @@ phases:
         HelixAccessToken: $(HelixTestAccessToken)
         CorrelationPayloadDirectory: $(Build.SourcesDirectory)/.dotnet
         WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
-        WorkItemCommand: cd %HELIX_WORKITEM_ROOT%\\HelloTests & "%HELIX_CORRELATION_PAYLOAD%\\dotnet xunit"
+        WorkItemCommand: cd %HELIX_WORKITEM_ROOT%\HelloTests & "%HELIX_CORRELATION_PAYLOAD%\dotnet xunit"
         EnableXUnitReporter: true
         Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
