--- a/eng/common/templates/phases/base.yml
+++ b/eng/common/templates/phases/base.yml
@@ -35,10 +35,16 @@ parameters:
 # Internal resources (telemetry, microbuild) can only be accessed from non-public projects,
 # and some (Microbuild) should only be applied to non-PR cases for internal builds.
 
-phases:
-- phase: ${{ parameters.name }}
+jobs:
+- job: ${{ parameters.name }}
 
-  queue: ${{ parameters.queue }}
+  ${{ if ne(parameters.strategy, '') }}:
+    strategy:
+      ${{ insert }}: ${{ parameters.strategy }}
+    
+  ${{ if ne(parameters.pool, '') }}:
+    pool:
+      ${{ insert }}: ${{ parameters.pool }}
 
   ${{ if ne(parameters.variables, '') }}:
     variables: 
