--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,11 @@ variables:
   _HelixType: build/product
   _HelixSource: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
   _HelixTestType: test/product
+  _XUnitProject: $(Build.SourcesDirectory)/HelloTests/HelloTests.csproj
+  _XUnitTargetFramework: netcoreapp2.0
+  _XUnitRunnerVersion: 2.4.1
+  _DotNetCliPackageType: sdk
+  _DotNetCliVersion: 2.1.403
 resources:
   containers:
   - container: LinuxContainer
@@ -42,12 +47,12 @@ phases:
         HelixType: $(_HelixTestType)
         HelixTargetQueues: Windows.10.Amd64.Open;Windows.7.Amd64.Open
         HelixAccessToken: $(BotAccount-dotnet-github-anon-kaonashi-bot-helix-token)
-        XUnitProjects: $(Build.SourcesDirectory)/HelloTests/HelloTests.csproj
-        XUnitTargetFramework: netcoreapp2.0
-        XUnitRunnerVersion: 2.4.1
+        XUnitProjects: $(_XUnitProject)
+        XUnitTargetFramework: $(_XUnitTargetFramework)
+        XUnitRunnerVersion: $(_XUnitRunnerVersion)
         IncludeDotNetCli: true
-        DotNetCliPackageType: sdk
-        DotNetCliVersion: 2.1.403
+        DotNetCliPackageType: $(_DotNetCliPackageType)
+        DotNetCliVersion: $(_DotNetCliVersion)
         EnableXUnitReporter: true
         WaitForWorkItemCompletion: true
         condition: eq(variables['_BuildConfig'], 'Debug')
@@ -87,12 +92,12 @@ phases:
         HelixType: $(_HelixTestType)
         HelixTargetQueues: OSX.1012.Amd64;OSX.1013.Amd64
         HelixAccessToken: $(BotAccount-dotnet-github-anon-kaonashi-bot-helix-token)
-        XUnitProjects: $(Build.SourcesDirectory)/HelloTests/HelloTests.csproj
-        XUnitTargetFramework: netcoreapp2.0
-        XUnitRunnerVersion: 2.4.1
+        XUnitProjects: $(_XUnitProject)
+        XUnitTargetFramework: $(_XUnitTargetFramework)
+        XUnitRunnerVersion: $(_XUnitRunnerVersion)
         IncludeDotNetCli: true
-        DotNetCliPackageType: sdk
-        DotNetCliVersion: 2.1.403
+        DotNetCliPackageType: $(_DotNetCliPackageType)
+        DotNetCliVersion: $(_DotNetCliVersion)
         EnableXUnitReporter: true
         WaitForWorkItemCompletion: true
         condition: eq(variables['_BuildConfig'], 'Debug')
@@ -136,12 +141,12 @@ phases:
         HelixType: $(_HelixTestType)
         HelixTargetQueues: Debian.9.Amd64.Open;Fedora.27.Amd64.Open;RedHat.74.Amd64.Open;Ubuntu.1604.Amd64.Open
         HelixAccessToken: $(BotAccount-dotnet-github-anon-kaonashi-bot-helix-token)
-        XUnitProjects: $(Build.SourcesDirectory)/HelloTests/HelloTests.csproj
-        XUnitTargetFramework: netcoreapp2.0
-        XUnitRunnerVersion: 2.4.1
+        XUnitProjects: $(_XUnitProject)
+        XUnitTargetFramework: $(_XUnitTargetFramework)
+        XUnitRunnerVersion: $(_XUnitRunnerVersion)
         IncludeDotNetCli: true
-        DotNetCliPackageType: sdk
-        DotNetCliVersion: 2.1.403
+        DotNetCliPackageType: $(_DotNetCliPackageType)
+        DotNetCliVersion: $(_DotNetCliVersion)
         EnableXUnitReporter: true
         WaitForWorkItemCompletion: true
         condition: eq(variables['_BuildConfig'], 'Debug')
