--- a/eng/common/templates/steps/helix-publish.yml
+++ b/eng/common/templates/steps/helix-publish.yml
@@ -26,7 +26,7 @@ steps:
     displayName: Prepend dotnet to path
     condition: and(succeeded(), eq(variables['Agent.Os'], 'Windows_NT'))
     env:
-      DotnetPath: $(DotnetPath)
+      DotnetPath: ${{ parameters.DotnetPath }}
   - script: |
       echo $DotnetPath
       echo $PATH
@@ -35,7 +35,7 @@ steps:
     displayName: Prepend dotnet to path
     condition: and(succeeded(), ne(variables['Agent.Os'], 'Windows_NT'))
     env:
-      DotnetPath: $(DotnetPath)
+      DotnetPath: ${{ parameters.DotnetPath }}
   - task: DotNetCoreCLI@2
     inputs:
       command: custom
