--- a/eng/common/templates/steps/helix-publish.yml
+++ b/eng/common/templates/steps/helix-publish.yml
@@ -27,15 +27,13 @@ steps:
     condition: and(succeeded(), eq(variables['Agent.Os'], 'Windows_NT'))
     env:
       DotnetPath: ${{ parameters.DotnetPath }}
-  - script: |
-      echo $DotnetPath
-      echo $PATH
-      echo ##vso[task.prependpath]$DotnetPath
-      echo $PATH
+  - script: 'echo ##vso[task.prependpath]$DotnetPath'
     displayName: Prepend dotnet to path
     condition: and(succeeded(), ne(variables['Agent.Os'], 'Windows_NT'))
     env:
       DotnetPath: ${{ parameters.DotnetPath }}
+  - script: 'echo $PATH'
+    condition: and(succeeded(), ne(variables['Agent.Os'], 'Windows_NT'))
   - task: DotNetCoreCLI@2
     inputs:
       command: custom
