--- a/eng/common/templates/steps/send-to-helix.yml
+++ b/eng/common/templates/steps/send-to-helix.yml
@@ -24,10 +24,10 @@ steps:
   - script: powershell eng/common/tools.ps1
     displayName: Install tools (Windows)
     condition: and(${{ parameters.condition }}, eq(variables['Agent.Os'], 'Windows_NT'))
-  - script: chmod +x eng/common/tools.sh; scriptroot="$BUILD_SOURCEDIRECTORY/eng" eng/common/tools.sh
+  - script: chmod +x eng/common/tools.sh; scriptroot="$BUILD_SOURCEDIRECTORY/eng"; source eng/common/tools.sh
     displayName: Install tools (Unix)
     condition: and(${{ parameters.condition }}, ne(variables['Agent.Os'], 'Windows_NT'))
-  - script: .dotnet\dotnet eng\common\helixpublish.proj /bl:$(Build.SourcesDirectory)\artifacts\log\$(_BuildConfig)\SendToHelix.binlog
+  - script: .dotnet\dotnet msbuild eng\common\helixpublish.proj /bl:$(Build.SourcesDirectory)\artifacts\log\$(_BuildConfig)\SendToHelix.binlog
     displayName: Send job to Helix (Windows)
     env:
       HelixSource: ${{ parameters.HelixSource }}
@@ -50,7 +50,7 @@ steps:
       WaitForWorkItemCompletion: ${{ parameters.WaitForWorkItemCompletion }}
     condition: and(${{ parameters.condition }}, eq(variables['Agent.Os'], 'Windows_NT'))
     continueOnError: ${{ parameters.continueOnError }}
-  - script: .dotnet/dotnet eng/common/helixpublish.proj /bl:$(Build.SourcesDirectory)/artifacts/log/$(_BuildConfig)/SendToHelix.binlog
+  - script: .dotnet/dotnet msbuild eng/common/helixpublish.proj /bl:$(Build.SourcesDirectory)/artifacts/log/$(_BuildConfig)/SendToHelix.binlog
     displayName: Send job to Helix (Unix)
     env:
       HelixSource: ${{ parameters.HelixSource }}
