Add documentation and explicit variable group reference

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ variables:
     value: sdk
   - name: _DotNetCliVersion
     value: 2.1.403
+  - group: Helix Anonymous
 
 resources:
   containers:
